<resources>
    <string name="app_name">GoArbit ISM</string>
    <string name="prompt_email">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_loguot">Logout</string>
    <string name="action_sign_in_short">Sign up</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="initial_messaje">WELCOME INVESTOR</string>

    <string name="menu_home">Home</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_news">News</string>

    <string name="register_now">REGISTER NOW</string>
    <string name="register_username">Username</string>
    <string name="register_mail">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_accepted">I Have Accepted</string>
    <string name="register_sign_up">SIGN UP</string>
    <string name="title_activity_register">ACTIVITY_REGISTER</string>
    <string name="register_terms_conditions">Terms and Conditions.</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_name">Name</string>
    <string name="retrieve_password_main">RECOVER PASSWORD</string>
    <string name="retrieve_password_title">Recover Password</string>
    <string name="login_have_account">You do not have an account?</string>
    <string name="login_forgot_password">Forgot password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="retrieve_password">Enter your email to recover the password</string>
    <string name="button_confirm">Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_profile">Profile</string>
    <string name="update">Update</string>
    <string name="profile">PROFILE</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="menu_goarbit2">" Invitation Code: 50169337"</string>
    <string name="register_sign_up_button">Sign Up</string>
    <string name="message_passwords_not_match">Entered passwords do not match</string>
    <string name="confirm">Confirm</string>
    <string name="verify_password">Old Password</string>
    <string name="verify_current_password">Enter your current password</string>
    <string name="menu_goarbit_inf">What is GoArbit?</string>
    <string name="menu_tvgo">GoTV</string>
    <string name="menu_token">Token</string>
    <string name="menu_iamgo_pro">IAMGO PRO</string>
    <string name="menu_dig_crypto">Dig Crypto</string>
    <string name="menu_card">Card</string>
    <string name="menu_cashiers">Cashiers</string>
    <string name="successful_process">Successful process</string>
    <string name="failed_process">Failed process</string>
    <string name="password_must_be_8_characters_or_more">Password must be 8 characters or more.</string>
    <string name="Passwords_do_not_match">Passwords do not match.</string>
    <string name="user_data_updated_successfully">User data updated successfully.</string>
    <string name="password_updated">The password has been successfully updated.</string>
    <string name="storage_access">In order to upload a profile image, you need to access your device\'s storage. Allows \'GoArbit ISM\' to access storage.</string>
    <string name="exit_app">Do you want to exit GoArbit?</string>
    <string name="message_yes">Yes</string>
    <string name="message_cancel">Cancel</string>
    <string name="exit_app2">Press back again to exit</string>
    <string name="menu_stake">Stake</string>
    <string name="message_connection">Does not have internet connection</string>
    <string name="message_incorrect">Incorrect user or password</string>
    <string name="message_password_incorrect">The password entered is incorrect</string>
    <string name="message_valid_password">You need to enter a valid password</string>
    <string name="message_updating_data">Updating Data...</string>
    <string name="message_empty_field">empty fields, you must fill in all fields</string>
    <string name="message_accept_terms">To create an account you must accept the terms and conditions</string>
    <string name="message_verify_valid">verify that the email is valid</string>
    <string name="message_logging">Logging in...</string>
    <string name="message_creating_account">Creating Account...</string>
    <string name="message_successful_reg">Successful registration</string>
    <string name="menu_goarbit">GoArbit</string>
    <string name="message_code">Competitor #:</string>


</resources>
