<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.goarbit_ism.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.goarbit_ism.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_calculator"
        android:name="com.example.goarbit_ism.ui.gallery.GalleryFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_gallery" />

    <activity
        android:id="@+id/nav_news"
        android:name="com.example.goarbit_ism.NewsActivity"
        android:label="@string/menu_news"
        tools:layout="@layout/activity_goarbit" />
        
    <activity
        android:id="@+id/nav_goarbit"
        android:name="com.example.goarbit_ism.GoarbitActivity"
        android:label="@string/menu_goarbit"
        tools:layout="@layout/activity_goarbit" />


</navigation>
