<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <io.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:elevation="4dp"
            app:shape_arc_height="20dp"
            app:shape_arc_position="bottom"
            >

            <!-- YOUR CONTENT -->

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/principal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold" />

        </io.github.florent37.shapeofview.shapes.ArcView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <ImageView
                android:layout_width="@dimen/dim_icon"
                android:layout_height="@dimen/dim_icon"
                android:src="@drawable/name_last_name"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparente"
                    android:hint="@string/register_name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <ImageView
                android:layout_width="@dimen/dim_icon"
                android:layout_height="@dimen/dim_icon"
                android:src="@drawable/name_last_name"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparente"
                    android:hint="@string/register_last_name"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <ImageView
                android:layout_width="@dimen/dim_icon"
                android:layout_height="@dimen/dim_icon"
                android:src="@drawable/usuario_black"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparente"
                    android:hint="@string/register_username"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <ImageView
                android:layout_width="@dimen/dim_icon"
                android:layout_height="@dimen/dim_icon"
                android:src="@drawable/email"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparente"
                    android:enabled="false"
                    android:hint="@string/register_mail"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <ImageView
                android:layout_width="@dimen/dim_icon"
                android:layout_height="@dimen/dim_icon"
                android:src="@drawable/password"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparente"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <ImageView
                android:layout_width="@dimen/dim_icon"
                android:layout_height="@dimen/dim_icon"
                android:src="@drawable/password"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparente"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>


        <com.skydoves.elasticviews.ElasticCheckButton
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@color/principal"
            android:text="@string/update"
            android:textColor="#ffff"
            android:textStyle="bold"
            app:checkButton_alpha="0.7"
            app:checkButton_cornerRadius="20dp"
            app:checkButton_duration="400"
            app:checkButton_scale="0.9" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>