<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <io.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:elevation="4dp"
            app:shape_arc_height="20dp"
            app:shape_arc_position="bottom"
            >

            <!-- YOUR CONTENT -->

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/principal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/initial_messaje"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/goarbit_icon"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"/>

        </io.github.florent37.shapeofview.shapes.ArcView>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <ImageView
                android:layout_width="@dimen/dim_icon"
                android:layout_height="@dimen/dim_icon"
                android:src="@drawable/email"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparente"
                    android:hint="@string/register_mail"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <ImageView
                android:layout_width="@dimen/dim_icon"
                android:layout_height="@dimen/dim_icon"
                android:src="@drawable/password"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparente"
                    android:hint="@string/register_password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>



        <com.skydoves.elasticviews.ElasticCheckButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/principal"
            android:text="@string/action_sign_in"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            app:checkButton_cornerRadius="20dp"
            app:checkButton_alpha="0.7"
            app:checkButton_duration="400"
            app:checkButton_scale="0.9"
            android:enabled="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">



            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/login_forgot_password" />

            <TextView
                android:id="@+id/createAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/register_now"
                android:textColor="@color/terciario"
                android:textStyle="bold" />

        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal">

    <ImageButton
        android:id="@+id/buttonFacebook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="35dp"
        android:scaleType="fitCenter"
        android:background="@color/transparente"

        app:srcCompat="@drawable/facebook_icon" />

    <ImageButton
        android:id="@+id/buttonWeb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        android:background="@color/transparente"

        app:srcCompat="@drawable/ism_icon" />

    <ImageButton
        android:id="@+id/buttonInstagram"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="35dp"
        android:scaleType="fitCenter"
        android:background="@color/transparente"

        app:srcCompat="@drawable/instagram_mini" />

</LinearLayout>



    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>

