<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/barraSuperior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/principal"
        android:elevation="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/btnSalir"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@color/transparente"
            android:text="Salir"
            android:src="@drawable/x_icon"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="right"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/retrieve_password_title"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="15dp"
        android:textSize="18dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColorHint="@color/azul"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/retrieve_password"
        app:counterTextColor="@color/black"
        app:hintTextColor="@color/azul"
        app:boxBackgroundColor="@color/transparente">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtMail"
            android:textStyle="bold"
            android:textColorHint="@color/azul"
            android:textColor="@color/black"
            android:textColorLink="@color/white"
            android:singleLine="true"
            android:gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:theme="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.skydoves.elasticviews.ElasticCheckButton
        android:id="@+id/btnRecuperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/principal"
        android:text="@string/button_confirm"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        app:checkButton_cornerRadius="20dp"
        app:checkButton_alpha="0.7"
        app:checkButton_duration="400"
        app:checkButton_scale="0.9"/>


</LinearLayout>